fix(notes-section): fix left and right spacing to 120px

--- a/styles/notes.css
+++ b/styles/notes.css
@@ -1,11 +1,50 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.font-inter {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.btn {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  border: none;
+  border-radius: 4px;
+  padding: 12px 16px;
+  background-color: #30b868;
+  font-size: 16px;
+  font-weight: 600;
+  color: #ffffff;
+}
+
+.btn-transparent {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  border-radius: 4px;
+  padding: 12px 16px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #ffffff;
+  background-color: transparent;
+  border: 2px solid #ffffff;
+}
+
 .notes {
   width: 100%;
   background-color: #ffffff;
 }
 
 .notes-container {
-  max-width: 1440px;
-  margin: 0 auto;
+  width: 100%;
   padding-left: 120px;
   padding-right: 120px;
 }
